--- a/angular20/package.json
+++ b/angular20/package.json
@@ -7,9 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "build:web-component": "vite build --config vite.web-component.config.ts",
-    "build:web-component:login": "ng build angular20-app --configuration=web-component-login",
-    "build:web-component:signup": "ng build angular20-app --configuration=web-component-signup",
-    "build:web-component:login:vite": "WEB_COMPONENT_NAME=login vite build --config vite.web-component.config.ts",
+    "build:web-component:login": "WEB_COMPONENT_NAME=login vite build --config vite.web-component.config.ts",
+    "build:web-component:signup": "WEB_COMPONENT_NAME=signup vite build --config vite.web-component.config.ts",
+    "build:web-component:login:cli": "ng build angular20-app --configuration=web-component-login",
+    "build:web-component:signup:cli": "ng build angular20-app --configuration=web-component-signup",
     "preview": "vite preview",
     "preview:web-component": "vite preview --config vite.web-component.config.ts",
     "watch": "vite build --watch",
